--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,5 @@
 {
-  "build": {
-    "env": {
-      "NODE_ENV": "production"
-    },
-    "npm": {
-      "installCommand": "npm install --legacy-peer-deps"
-    }
+  "install": {
+    "npm": "npm install --legacy-peer-deps"
   }
 }
